[gd_scene load_steps=9 format=3 uid="uid://dx8qq13oo4qt3"]

[ext_resource type="PackedScene" uid="uid://idpait1rpnfw" path="res://aa.tscn" id="1_h4ksb"]
[ext_resource type="Script" path="res://niveau3.gd" id="1_k0jgc"]
[ext_resource type="PackedScene" uid="uid://cgkwcslx3jru0" path="res://raid_messer.tscn" id="2_xdcxe"]
[ext_resource type="AudioStream" uid="uid://da7xee7hr3n4g" path="res://son/attack2t22wav-14511.mp3" id="3_cwpxb"]
[ext_resource type="PackedScene" uid="uid://dd572e68e42ho" path="res://ally.tscn" id="4_vu3d2"]
[ext_resource type="Texture2D" uid="uid://0atpgroywt8d" path="res://texturess/vie_vide.png" id="6_cojtw"]
[ext_resource type="Texture2D" uid="uid://bah2l8cdclt8e" path="res://texturess/vie_plein1.png" id="7_x74kw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q16os"]
size = Vector3(0.827883, 143.258, 123.342)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_k0jgc")

[node name="Node3D" parent="." instance=ExtResource("1_h4ksb")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cwpxb")
volume_db = -9.0
autoplay = true

[node name="Node3D2" parent="." instance=ExtResource("4_vu3d2")]
transform = Transform3D(-4.37114e-08, -0.64679, -0.762669, 0, 0.762669, -0.64679, 1, -2.82721e-08, -3.33373e-08, 0, 6.2449, 23.1052)

[node name="Node3D3" parent="." instance=ExtResource("4_vu3d2")]
transform = Transform3D(-4.37114e-08, -0.64679, -0.762669, 0, 0.762669, -0.64679, 1, -2.82721e-08, -3.33373e-08, 12.0798, 3.88853, 23.1052)

[node name="Node3D4" parent="." instance=ExtResource("4_vu3d2")]
transform = Transform3D(-4.37114e-08, -0.64679, -0.762669, 0, 0.762669, -0.64679, 1, -2.82721e-08, -3.33373e-08, 12.0798, 3.88853, 14.8854)

[node name="Node3D5" parent="." instance=ExtResource("4_vu3d2")]
transform = Transform3D(-4.37114e-08, -0.64679, -0.762669, 0, 0.762669, -0.64679, 1, -2.82721e-08, -3.33373e-08, 19.2527, 3.88853, 7.68344)

[node name="Node3D6" parent="." instance=ExtResource("4_vu3d2")]
transform = Transform3D(-4.37114e-08, -0.64679, -0.762669, 0, 0.762669, -0.64679, 1, -2.82721e-08, -3.33373e-08, 19.2527, 3.88853, -7.63939)

[node name="Node3D7" parent="." instance=ExtResource("4_vu3d2")]
transform = Transform3D(-4.37114e-08, -0.64679, -0.762669, 0, 0.762669, -0.64679, 1, -2.82721e-08, -3.33373e-08, 12.1299, 6.83569, -16.7895)

[node name="Node3D8" parent="." instance=ExtResource("4_vu3d2")]
transform = Transform3D(-4.37114e-08, -0.64679, -0.762669, 0, 0.762669, -0.64679, 1, -2.82721e-08, -3.33373e-08, 12.1299, 6.83569, -26.4522)

[node name="Node3D9" parent="." instance=ExtResource("4_vu3d2")]
transform = Transform3D(-4.37114e-08, -0.64679, -0.762669, 0, 0.762669, -0.64679, 1, -2.82721e-08, -3.33373e-08, 1.42225, 6.83569, -26.4522)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.3689, 17.9843, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.56841, 34.7481, 0)
shape = SubResource("BoxShape3D_q16os")

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.4895, 17.9843, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.56841, 34.7481, 0)
shape = SubResource("BoxShape3D_q16os")

[node name="raid_messer" parent="." instance=ExtResource("2_xdcxe")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 81.5432, 38.7435, 0)

[node name="raid_messer2" parent="." instance=ExtResource("2_xdcxe")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 153.704, 38.7435, 0)

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_right = 400.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 5.0
value = 5.0
nine_patch_stretch = true
texture_over = ExtResource("6_cojtw")
texture_progress = ExtResource("7_x74kw")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="child_exiting_tree" from="raid_messer" to="." method="_on_raid_messer_child_exiting_tree"]
[connection signal="child_exiting_tree" from="raid_messer2" to="." method="_on_raid_messer_2_child_exiting_tree"]
